k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuni-portfolio
  namespace: tuni-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tuni-portfolio
  template:
    metadata:
      labels:
        app: tuni-portfolio
    spec:
      containers:
        - name: tuni-portfolio
          image: ghcr.io/etunidev/tuni-portfolio:8ecb36d15ce6fa66b89e67b85c5bc5310052fd74
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
