k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tuni-portfolio
  namespace: tuni-portfolio
spec:
  selector:
    app: tuni-portfolio
  ports:
    - port: 80
      targetPort: 80
